--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,26 @@
 # Enables 256-color support
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
+# Style status bar
+set -g status-style fg=white,bg=black
+set -g window-status-current-style fg=green,bg=black
+# set -g pane-active-border-style fg=green,bg=black
+# set -g window-status-format " #I:#W#F "
+# set -g window-status-current-format " #I:#W#F "
+# set -g window-status-current-style bg=green,fg=black
+# set -g window-status-activity-style bg=black,fg=yellow
+# set -g window-status-separator ""
+# set -g status-justify left 
 
-# Removes delay after pressing esc key
-set -s escape-time 0
+# Removes delay after pressing esc key. http://superuser.com/a/252717/65504
+set -s escape-time 50 
+# Increases the scrollback buffer
+set -g history-limit 10000
+# Enables focus reporting, reuired by neovim
+set-option -g focus-events on
 
 # Customize status bar
-set -g status-style 'bg=#333333 fg=#5eacd3'
+# set -g status-style 'bg=#333333 fg=#5eacd3'
 
 # Rebinds prefix to C-a
 unbind C-b
@@ -20,10 +34,27 @@ set-window-option -g mode-keys vi
 
 # vim-like pane switching
 bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
 
-#
+# Session fuzzy find 
 bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
+
+# Changes window pane numbering
+set -g base-index 1
+set-window-option -g pane-base-index 1
+set -g renumber-windows on
+
+# Mousemode
+# Toggle mouse on with ^B m
+bind m \
+  set -g mouse on \;\
+  display 'Mouse Mode: ON'
+
+# Toggle mouse off with ^B M
+bind M \
+  set -g mouse off \;\
+  display 'Mouse Mode: OFF'
+
