--- a/hypr/envs.conf
+++ b/hypr/envs.conf
@@ -2,6 +2,11 @@
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# Dark theme
+env = GTK_THEME,Adwaita:dark
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+
 # Force all apps to use Wayland
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
