--- a/zed/settings.json
+++ b/zed/settings.json
@@ -8,7 +8,7 @@
   "ui_font_size": 16,
   "buffer_font_size": 15,
   "wrap_guides": [80],
-  "relative_line_numbers": true,
+  "relative_line_numbers": "enabled",
   "theme": "Gruvbox Dark Hard",
   "scrollbar": {
     "show": "never"
