--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # ==============================================================================
-# HYPRLAND CONFIGURATION - Single-file laptop setup
+# HYPRLAND CONFIGURATION - Single-file setup
 # ==============================================================================
 
 source = ~/.config/hypr/envs.conf
@@ -7,7 +7,9 @@ source = ~/.config/hypr/envs.conf
 # ==============================================================================
 # MONITOR
 # ==============================================================================
-monitor = ,preferred,auto,1
+monitor = eDP-1, 1920x1080, 0x0, 1
+monitor = DP-2, 1920x1080, 0x-1080, 1
+monitor = DP-3, 3440x1440, 0x-1440, 1
 
 # ==============================================================================
 # AUTOSTART
@@ -19,6 +21,7 @@ exec-once = swaybg -i ~/.config/hypr/wallpaper.jpg -m fill
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = xwaylandvideobridge
 
 # ==============================================================================
 # INPUT
@@ -35,9 +38,10 @@ input {
 }
 
 # gestures {
-#    workspace_swipe = true
-#    workspace_swipe_fingers = 3
-# }
+#     workspace_swipe = true
+#     workspace_swipe_fingers = 3
+#     workspace_swipe_distance = 200
+
 
 # ==============================================================================
 # LOOK & FEEL
