--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,7 +27,8 @@ exec-once = xwaylandvideobridge
 # INPUT
 # ==============================================================================
 input {
-    kb_layout = us
+    kb_layout = us, it
+    kb_options = grp:alt_shift_toggle
     follow_mouse = 1
     sensitivity = 0
     touchpad {
