--- a/hypr/waybar/config.jsonc
+++ b/hypr/waybar/config.jsonc
@@ -5,7 +5,7 @@
 
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["clock"],
-  "modules-right": ["tray", "network", "pulseaudio", "backlight", "battery"],
+  "modules-right": ["tray", "hyprland/language", "network", "pulseaudio", "backlight", "battery"],
 
   "hyprland/workspaces": {
     "format": "{id}",
@@ -28,6 +28,13 @@
     "format-plugged": "󰚥 {capacity}%",
     "format-icons": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
     "tooltip-format": "{timeTo}\nPower: {power:.1f}W"
+  },
+
+  "hyprland/language": {
+    "format": "{}",
+    "format-en": "US",
+    "format-it": "IT",
+    "on-click": "hyprctl switchxkblayout at-translated-set-2-keyboard next"
   },
 
   "network": {
