--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,9 +7,9 @@ source = ~/.config/hypr/envs.conf
 # ==============================================================================
 # MONITOR
 # ==============================================================================
-monitor = eDP-1, 1920x1080, 0x0, 1
-monitor = DP-2, 1920x1080, 0x-1080, 1
-monitor = DP-3, 3440x1440, 0x-1440, 1
+monitor = eDP-1, 1920x1080@60, 0x0, 1
+monitor = DP-2, 1920x1080@60, 0x-1080, 1
+monitor = DP-3, 3440x1440@60, 0x-1440, 1
 
 # ==============================================================================
 # AUTOSTART
@@ -21,7 +21,8 @@ exec-once = swaybg -i ~/.config/hypr/wallpaper.jpg -m fill
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = xwaylandvideobridge
+exec-once = xwaylandvideobridge # Discord and streaming
+exec-once = gnome-keyring-daemon --replace --start --components=pkcs11,secrets,ssh
 
 # ==============================================================================
 # INPUT
@@ -154,6 +155,10 @@ bindd = $mod SHIFT, 8, Move window to workspace 8, movetoworkspace, 8
 bindd = $mod SHIFT, 9, Move window to workspace 9, movetoworkspace, 9
 bindd = $mod SHIFT, 0, Move window to workspace 10, movetoworkspace, 10
 
+# Move workspace to monitor
+bindd = $mod CTRL, 1, Move workspace to main monitor, exec, ~/.config/hypr/scripts/move-workspace-to-monitor main
+bindd = $mod CTRL, 2, Move workspace to external monitor, exec, ~/.config/hypr/scripts/move-workspace-to-monitor external
+
 # Scroll workspaces
 bindd = $mod, mouse_down, Scroll to next workspace, workspace, e+1
 bindd = $mod, mouse_up, Scroll to previous workspace, workspace, e-1
@@ -186,3 +191,6 @@ bindd = $mod SHIFT, B, Show battery status, exec, notify-send "󰁹 Battery" "$(
 
 # Lock screen
 bindd = $mod CTRL, L, Lock screen, exec, hyprlock
+
+# Monitor layout
+bindd = $mod, O, Toggle mirror/extend, exec, ~/.config/hypr/scripts/toggle-monitor-layout
