--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,9 +7,8 @@ source = ~/.config/hypr/envs.conf
 # ==============================================================================
 # MONITOR
 # ==============================================================================
-monitor = eDP-1, 1920x1080@60, 0x0, 1
-monitor = DP-2, 1920x1080@60, 0x-1080, 1
-monitor = DP-3, 3440x1440@60, 0x-1440, 1
+# Fully automatic monitor handling for any connected display.
+monitor = , preferred, auto, 1
 
 # ==============================================================================
 # AUTOSTART
