--- a/hypr/waybar/config.jsonc
+++ b/hypr/waybar/config.jsonc
@@ -1,4 +1,5 @@
 {
+    "output": "eDP-1",
     "position": "top",
     "height": 30,
     "spacing": 4,
@@ -20,7 +21,13 @@
     ],
     "hyprland/workspaces": {
         "format": "{id}",
-        "on-click": "activate"
+        "on-click": "activate",
+        "all-outputs": true,
+        "sort-by": "number",
+        "move-to-monitor": true,
+        "persistent-workspaces": {
+            "*": 10
+        }
     },
     "clock": {
         "format": "{:%a %b %d  %H:%M}",
